--- a/src/assets/css/player.css
+++ b/src/assets/css/player.css
@@ -5,7 +5,7 @@
 .player {
 	position: relative;
 	width: 640px;
-	height: 460px;
+	height: 476px;
 }
 
 .player .control-bar {
@@ -13,11 +13,23 @@
 	bottom: 0;
 	left: 0;
 	z-index: 1;
+	width: 100%;
+	height: 60px;
+	background-color: rgba(0,0,0, .5);
+}
+
+.player .control-header {
+	height: 10px;
+	color: yellow;
+	line-height: 26px;
+	text-align: center;
+}
+
+.player .control-body {
 	box-sizing: border-box;
 	width: 100%;
 	height: 50px;
 	padding: 9px 20px;
-	background-color: rgba(0,0,0, .5);
 }
 
 .player .btns {
@@ -44,7 +56,7 @@
 .player .progress {
 	position: relative;
 	display: inline-block;
-	width: 360px;
+	width: 380px;
 	height: 3px;
 	vertical-align: 3px;
 	background: #666;
